using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constan
{
    public const string AnimIdle = "idle";
    public const string AnimRun = "run";
    public const string AnimWalk = "walk";
    public const string AnimJump = "jump";
    public const string AnimSlide = "slide";
    public const string AnimFall = "fall";
}